--- a/azuredevops/config-pipeline.yaml
+++ b/azuredevops/config-pipeline.yaml
@@ -8,8 +8,8 @@ variables:
 
 stages:  
   - stage: Dev_UpdateGitOps
-    displayName: Update GitOps Repo (image tag)
-    dependsOn: Build
+    displayName: Update GitOps Repo
+
     variables:
       - group: 'k8s-dev'
     jobs:
